Fix alignment of sections

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,6 +21,7 @@ header h1, #paw {
 
 h2, p {
     font-family: Sono, sans-serif;
+    margin: 20px 20px;
 }
 
 p {
@@ -87,21 +88,20 @@ header, footer div {
     float: left;
     padding: 30px 10% 0 30px;
     box-sizing: border-box;
-    height: 300px;
+    height: 320px;
 }
 
-#rehome-choices a, h2, p {
+#rehome-choices a {
     text-decoration: none;
     color: whitesmoke;
-    margin: 20px;
 }
+
 
 #dog-rehome {
     background: url("../images/dog-big-eyes.jpg") no-repeat top/110%;
     background-size: cover;
     border: 2px hidden;
 }
-
 
 #cat-rehome {
     background: url('../images/cat-looks-up.jpg') no-repeat center/105%;
@@ -120,14 +120,14 @@ header, footer div {
     width: 33.333%;
     height: 350px;
     float: left;
-    padding: 30px 10% 0 30px;
-    text-align: left;
     box-sizing: border-box;
+    padding: 20px 5px 0 20px;
+    text-align: left;
 }
 
 #cute-image {
     background: url("../images/kitten-asleep.jpg") no-repeat bottom/110%;
-    border: 2px solid #271401;
+    border: 2px solid hidden;
 
     /*animation-name: cute-zoom;
     animation-duration: 5s;
